SigmaCodebackup3rdSep/objects/Stock_Check_Details__c.object
<CustomObject>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difference_Quantities__c</fullName>
        <formula>Available_Quantity__c - Stock_Check_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipName>Stock_Check_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Stock Check  LineItems</relationshipLabel>
        <relationshipName>Stock_Check_LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Stock_Check_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Damaged Stock</fullName>
                </value>
                <value>
                    <fullName>Missing Stock</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Verified - Not Matched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StockCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>StockCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stock_Check_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stock Check Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Check</label>
        <referenceTo>Stock_Check__c</referenceTo>
        <relationshipName>Stock_Check_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stock Check LineItems</label>
    <nameField>
        <displayFormat>SCD-{0000}</displayFormat>
        <label>Stock Check Details Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Check  LineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>